examenes/2017Q2 - 2do parcial/Gallego/firewall.conf
# Generated by iptables-save v1.4.21 on Wed Nov 15 21:11:13 2017
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [16:1064]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.20.3/32 -o eth0 -j ACCEPT
COMMIT
# Completed on Wed Nov 15 21:11:13 2017
# Generated by iptables-save v1.4.21 on Wed Nov 15 21:11:13 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [16:1064]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.20.0/24 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.20.0/24 -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -i eh0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -i eh0 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,443 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Wed Nov 15 21:11:13 2017
